tests/snapshots/files__complex_merge_func_proof_testing.snap
---
source: tests/files.rs
expression: snapshot_content
---
(let t0 (f 0 (Leaf (X))))
(Rule
  (= (@ExistsConstructor) (@ExistsConstructor))
  (name "@prove_exists_rule")
  (premises (Fiat (= t0 t0)) (Fiat (= (Leaf (X)) (Leaf (X)))))
  (substitution (@n (Leaf (X)))))(let t0 (C2 (C1 (Leaf (X)) (Leaf2 (X))) (C2 (Leaf (X)) (Leaf2 (X)))))
(let t1 (f 0 t0))
(let t2 (f 0 (Leaf (X))))
(let prf0 (Fiat (= t2 t2)))
(let t3 (f 0 (Leaf2 (X))))
(let prf1 (Fiat (= t3 t3)))
(Rule
  (= (@ExistsConstructor1) (@ExistsConstructor1))
  (name "@prove_exists_rule1")
  (premises (Merge (= t1 t1) f prf0 prf1) (Merge (= t0 t0) f prf0 prf1))
  (substitution (@n1 t0)))
