tests/snapshots/files__complex_merge_func_term_encoding.snap
---
source: tests/files.rs
expression: snapshot_content
---
C1: 2
C1: 2
C2: 4
C2: 4
Leaf: 1
Leaf: 1
Leaf2: 1
Leaf2: 1
X: 1
X: 1
f: 2
f: 1
