tests/snapshots/files__cyk.snap
---
source: tests/files.rs
expression: snapshot_content
---
(NT "S" (T "NP" "she") (NT "VP" (NT "VP" (T "V" "eats") (NT "NP" (T "DET" "a") (T "N" "fish"))) (NT "PP" (T "P" "with") (NT "NP" (T "DET" "a") (T "N" "fork")))))
(
   (NT "S" (NT "B" (NT "C" (T "A" "a") (T "B" "b")) (T "C" "a")) (NT "C" (T "A" "a") (T "B" "b")))
   (NT "S" (NT "A" (NT "B" (NT "C" (T "A" "a") (T "B" "b")) (T "C" "a")) (T "A" "a")) (T "B" "b"))
   (B 5 1 (NonTerm "S"))
)
(
   (NT "S" (T "A" "a") (NT "B" (T "C" "a") (NT "C" (T "A" "a") (NT "B" (T "C" "a") (T "C" "a")))))
   (NT "S" (NT "B" (T "C" "a") (T "C" "a")) (NT "C" (T "A" "a") (NT "B" (T "C" "a") (T "C" "a"))))
   (NT "S" (NT "A" (NT "B" (T "C" "a") (T "C" "a")) (T "A" "a")) (NT "B" (T "C" "a") (T "C" "a")))
   (NT "S" (NT "B" (T "C" "a") (NT "C" (T "A" "a") (NT "B" (T "C" "a") (T "C" "a")))) (T "C" "a"))
   (B 5 1 (NonTerm "S"))
)
B: 0
End: 3
NT: 0
NonTerm: 4
P: 0
Prod: 5
T: 0
Term: 0
getString: 0
