tests/snapshots/files__cykjson_desugar.snap
---
source: tests/files.rs
expression: snapshot_content
---
B: 3218
End: 17
NT: 120
P: 3218
Prod: 17
T: 11
getString: 801
