tests/snapshots/files__eqsat_basic_multiset_desugar.snap
---
source: tests/files.rs
expression: snapshot_content
---
Add: 2
Mul: 2
Num: 3
Product: 4
Sum: 2
Var: 1
tmp-fn: 2
