tests/snapshots/files__eqsat_basic_proof_testing.snap
---
source: tests/files.rs
expression: snapshot_content
---
(let t0 (Mul (Num 2) (Add (Var "x") (Num 3))))
(let t1 (Mul (Num 2) (Var "x")))
(let t2 (Add (Num 6) t1))
(let prop0 (= t0 t2))
(let prf0 (Fiat (= t0 t0)))
(let t3 (Add t1 (Num 6)))
(let prop1 (= t0 t3))
(let t4 (Mul (Num 2) (Num 3)))
(let t5 (Add t1 t4))
(let t6 (premises prf0))
(let t7
  (substitution
                  (@rewrite_var__1 t0)
                  (a (Num 2))
                  (b (Var "x"))
                  (c (Num 3))))
(let prop2 (= t3 t2))
(Trans
  prop0
  prf0
  (Trans
    prop0
    (Sym
      prop1
      (Sym
        (= t3 t0)
        (Congr
          prop1
          (Sym
            (= t0 t5)
            (Rule
              (= t5 t0)
              (name "(rewrite (Mul a (Add b c)) (Add (Mul a b) (Mul a c)))")
              t6
              t7))
          (Rule
            (= t4 (Num 6))
            (name "(rewrite (Mul (Num a) (Num b)) (Num (* a b)))")
            (premises
              (Rule
                (= t4 t4)
                (name "(rewrite (Mul a (Add b c)) (Add (Mul a b) (Mul a c)))")
                t6
                t7))
            (substitution (a 2) (b 3) (@rewrite_var__3 t4)))
          1)))
    (Sym
      prop2
      (Sym
        (= t2 t3)
        (Rule
          prop2
          (name "(rewrite (Add a b) (Add b a))")
          (premises (Fiat (= t2 t2)))
          (substitution (a (Num 6)) (b t1) (@rewrite_var__ t2)))))))
