tests/snapshots/files__eqsat_basic_term_encoding.snap
---
source: tests/files.rs
expression: snapshot_content
---
Add: 6
Add: 4
Mul: 3
Mul: 3
Num: 3
Num: 3
Var: 1
Var: 1
